<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtTitlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Note"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitlePage"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Write your title"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:text="Description"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/edtTitle"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:lines="8"
            android:maxLines="10"
            android:gravity="start|top"
            android:hint="Write your description"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/btnIncreament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:padding="10dp"
            android:onClick="onClickAddNote"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edtDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>